unpackaged/main/default/objects/GTM_Ticket_Definition__c/GTM_Ticket_Definition__c.object-meta.xml
<CustomObject>
    <label>GTM Ticket Definition</label>
    <nameField>
        <label>GTM Ticket Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTM Ticket Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>