unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Auto_Watch_CSM__c.field-meta.xml
<CustomField>
    <fullName>Auto_Watch_CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Watch: CSM</label>
    <type>Checkbox</type>
</CustomField>