unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Auto_Watch_Deployed_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Auto_Watch_Deployed_Engineer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Watch: Deployed Engineer</label>
    <type>Checkbox</type>
</CustomField>