unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Auto_Watch_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Auto_Watch_Opportunity_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Watch: Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>