unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Channel_Auto_Create_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Channel_Auto_Create_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel: Auto Create By Default?</label>
    <type>Checkbox</type>
</CustomField>