unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel: ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>