unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Channel_Link__c.field-meta.xml
<CustomField>
    <fullName>Channel_Link__c</fullName>
    <formula>IF(ISBLANK(Channel_ID__c),NULL,HYPERLINK(&quot;https://retooled.slack.com/archives/&quot;&amp;Channel_ID__c,&quot;Link&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel: Link</label>
    <type>Text</type>
</CustomField>