unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Channel_Visibility_Default__c.field-meta.xml
<CustomField>
    <fullName>Channel_Visibility_Default__c</fullName>
    <label>Channel: Visibility Default</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>