unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Default_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GTM_Ticket_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>