unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Default_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Size__c</fullName>
    <label>Default Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Ticket_Sizes</valueSetName>
    </valueSet>
</CustomField>