unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Documentation_Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Link_Description__c</fullName>
    <label>Documentation: Link Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>