unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>