unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Problem_Template__c.field-meta.xml
<CustomField>
    <fullName>Problem_Template__c</fullName>
    <label>Problem Template</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>