unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Routing_Description__c.field-meta.xml
<CustomField>
    <fullName>Routing_Description__c</fullName>
    <label>Routing: Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>