unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Scope_Departments__c.field-meta.xml
<CustomField>
    <fullName>Scope_Departments__c</fullName>
    <label>Scope: Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>