unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Scope_Submitter_Levels__c.field-meta.xml
<CustomField>
    <fullName>Scope_Submitter_Levels__c</fullName>
    <label>Scope: Submitter Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>