unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Solution_Template__c.field-meta.xml
<CustomField>
    <fullName>Solution_Template__c</fullName>
    <label>Solution Template</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>