unpackaged/main/default/objects/GTM_Ticket_Definition__c/fields/Type_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Short_Name__c</fullName>
    <label>Type: Short Name</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>