unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Documentation_Link__c</columns>
    <columns>Documentation_Link_Description__c</columns>
    <columns>Default_Due_Days__c</columns>
    <columns>Default_Size__c</columns>
    <columns>Default_Assignee__c</columns>
    <columns>Type_Short_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>