unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Deal_Desk.listView-meta.xml
<ListView>
    <fullName>Deal_Desk</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Default_Assignee__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Documentation_Link__c</columns>
    <columns>Documentation_Link_Description__c</columns>
    <columns>Default_Due_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Deal Desk</value>
    </filters>
    <label>Deal Desk</label>
</ListView>