unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Documentation.listView-meta.xml
<ListView>
    <fullName>Documentation</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Documentation_Link__c</columns>
    <columns>Documentation_Link_Description__c</columns>
    <columns>Default_Due_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>Documentation</label>
</ListView>