unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Instructions.listView-meta.xml
<ListView>
    <fullName>Instructions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>Instructions</label>
</ListView>