unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Routing.listView-meta.xml
<ListView>
    <fullName>Routing</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Routing_Description__c</columns>
    <columns>Sensitivity_Level__c</columns>
    <columns>Default_Assignee__c</columns>
    <columns>Default_Due_Days__c</columns>
    <columns>Default_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>Routing</label>
</ListView>