unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Scopes.listView-meta.xml
<ListView>
    <fullName>Scopes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Scope_Departments__c</columns>
    <columns>Scope_Objects__c</columns>
    <columns>Scope_Submitter_Levels__c</columns>
    <filterScope>Everything</filterScope>
    <label>Scopes</label>
</ListView>