unpackaged/main/default/objects/GTM_Ticket_Definition__c/listViews/Slack.listView-meta.xml
<ListView>
    <fullName>Slack</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Channel_Auto_Create_By_Default__c</columns>
    <columns>Channel_ID__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Channel_Visibility_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>Slack</label>
</ListView>